--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
+
+
+
+
+
+
+
 {
-  "name": "apiVortex",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node api/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api/index.js"
+  
   },
   "keywords": [],
   "author": "",
